# rust-graphql-api-sample

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2019-12-23-024655_create_users/: up.sql
