[package]
name = "jda-graphql"
version = "0.1.0"
authors = ["75-akimas <akms2679@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-cors = "0.1.0"
juniper = "0.14.1"
juniper-from-schema = "0.5.1"
juniper-eager-loading = "0.5.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.7"
futures01 = "0.1.29"
serde_json = "1.0.42"
itertools = "0.8.2"
